# HetMUAVNet

./: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  cmake_install.cmake  setup-environment.sh  test  testc++.c
debian/: changelog  control  copyright  rules
docker-scripts/build-ubuntu-deb/: Dockerfile
docker-scripts/run-in-docker/: Dockerfile.intel  Dockerfile.nographics  build.sh
ns-3/: CMakeLists.txt  README.md  setup-environment.sh
ns-3/external-sync/: wscript
ns-3/external-sync/doc/: external-sync.rst
ns-3/external-sync/examples/: lan.cc  lr-wpan.cc  p2p.cc  wifi-adhoc.cc  wifi.cc  wscript
ns-3/external-sync/helper/: external-sync-helper.cc  external-sync-helper.h
ns-3/external-sync/model/: external-sync-manager.cc  external-sync-manager.h  external-sync-simulator-impl.cc  external-sync-simulator-impl.h
ns-3/external-sync/test/: external-sync-test-suite.cc
src/ardupilot/: CMakeLists.txt  apply-patches.sh
src/ardupilot/patches/: 0001-Faster-simulation-startup-time-DO-NOT-USE-IN-A-REAL-.patch  0002-Added-GzUav-SITL-module-a-fork-of-the-Gazebo-SITL-mo.patch  0003-SIM_GzUav-emulate-2-axis-Alexmos-gimbal.patch  README.txt
src/gazebo/: CMakeLists.txt
src/gazebo/models/cgo3_gimbal/: model.config  model.sdf
src/gazebo/models/iris_with_standoffs_cgo3/: model.config  model.gzuav  model.sdf
src/gazebo/models/iris_with_standoffs_nocamera/: model.config  model.gzuav  model.sdf
src/gazebo/plugins/: CMakeLists.txt  GzUavPhaseGenerator.cc  GzUavPhaseGenerator.hh
src/gazebo/plugins/GzUavCameraPlugin/: FrameServer.cc  FrameServer.hh  GzUavCameraPlugin.cc  GzUavCameraPlugin.hh
src/gazebo/plugins/GzUavVehiclePlugin/: Gimbal.cc  Gimbal.hh  GzUavVehiclePlugin.cc  GzUavVehiclePlugin.hh  PoseSampler.cc  PoseSampler.hh  Rotor.cc  Rotor.hh  common.cc  common.hh
src/gzuav/: CMakeLists.txt  gzuavclient  gzuavcluster  gzuavserver
src/gzuav/gzuavlib/: GazeboPaths.py  GzUavPaths.py.in  StatusServer.py  WorldTemplateFiller.py
src/gzuavchannel/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  ExternalSyncServer.cpp  ExternalSyncServer.h  TCPTransport.cpp  TCPTransport.h  Transport.cpp  Transport.h  UDSTransport.cpp  UDSTransport.h  main.cpp
src/libs/: CMakeLists.txt
src/libs/IO/: Poll.cpp  Poll.h
src/libs/MAVLink/: MAVLink.cpp  MAVLink.h
src/mavmix/: CMakeLists.txt  main.cpp
tutorial/05-distributed_flocking_ns3/: helper.py  launch.sh  main.py  simulation.ini  simulation.world
tutorial/scenario1/: helper.py  launch.sh  main.py  simtime.py  simulation.ini  simulation.world
tutorial/scenario2/: main.py  ns3interface.py
